--- a/Vanp.DAL/Vanp.DAL.csproj
+++ b/Vanp.DAL/Vanp.DAL.csproj
@@ -88,10 +88,12 @@
       <DependentUpon>Vanp.tt</DependentUpon>
     </Compile>
     <Compile Include="Repositories\Interface\IRequestRepository.cs" />
+    <Compile Include="Repositories\Interface\IWishlistRepository.cs" />
     <Compile Include="Repositories\RequestRepository.cs" />
     <Compile Include="Repositories\Interface\IProductRepository.cs" />
     <Compile Include="Repositories\Interface\IUserRoleRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
+    <Compile Include="Repositories\WishlistRepository.cs" />
     <Compile Include="Repositories\UserRoleRepository.cs" />
     <Compile Include="Repositories\Interface\ICategoryRepository.cs" />
     <Compile Include="Repositories\Interface\IUserRepository.cs" />
