--- a/Vanp.DAL/Vanp.DAL.csproj
+++ b/Vanp.DAL/Vanp.DAL.csproj
@@ -88,7 +88,9 @@
       <DependentUpon>Vanp.tt</DependentUpon>
     </Compile>
     <Compile Include="Repositories\Interface\IRequestRepository.cs" />
+    <Compile Include="Repositories\Interface\IBidHistoryRepository.cs" />
     <Compile Include="Repositories\Interface\IWishlistRepository.cs" />
+    <Compile Include="Repositories\BidHistoryRepository.cs" />
     <Compile Include="Repositories\RequestRepository.cs" />
     <Compile Include="Repositories\Interface\IProductRepository.cs" />
     <Compile Include="Repositories\Interface\IUserRoleRepository.cs" />
